--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
       </div>
       <!-- Botón 3 puntos (futuro) -->
-      <button class="home-dots-btn" id="dotsBtn" title="Más opciones">⋯</button>
+      <button class="home-dots-btn" id="dotsBtn" title="Más opciones">⋮</button>
     </div>
 
   </div>
