--- a/pages/editor.html
+++ b/pages/editor.html
@@ -10,12 +10,15 @@
 </head>
 <body class="editor-page">
 
-<header class="site-header editor-site-header">
+<header class="site-header home-header editor-site-header">
   <div class="editor-header-inner">
 
-    <a href="../index.html" class="logo-link">
-      <span class="logo-main">Comic<span class="logo-accent">Show</span></span>
-    </a>
+    <div class="home-logo-area">
+      <a href="../index.html" class="logo-link">
+        <span class="logo-main">Comic<span class="logo-accent">Show</span></span>
+      </a>
+      <span class="home-tagline">Crea y comparte tus cómics</span>
+    </div>
 
     <!-- Menús (aparecen solo cuando hay proyecto activo) -->
     <nav class="editor-menus" id="editorMenus" style="display:none">
