--- a/pages/reader.html
+++ b/pages/reader.html
@@ -14,7 +14,11 @@
 
 <!-- Barra superior: solo PC -->
 <div class="reader-topbar" id="readerTopbar">
-  <a href="../index.html" class="reader-home-btn" title="Volver al inicio">🏠</a>
+  <div class="home-logo-area" style="flex-direction:row;align-items:center;gap:6px">
+    <a href="../index.html" class="logo-link">
+      <span class="logo-main" style="font-size:1.4rem">Comic<span class="logo-accent">Show</span></span>
+    </a>
+  </div>
   <div class="reader-info">
     <span class="reader-comic-title" id="readerComicTitle"></span>
     <span class="reader-panel-num"   id="readerPanelNum">1 / 1</span>
